First commited as before_1614_rev2